// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/TreeView Complex 1`] = `
<div
  dir="ltr"
>
  <div>
    <div
      className="fd-tree fd-tree--header"
    >
      <div
        className="fd-tree__row fd-tree__row--header"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-label="expand all"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            Column Header 1
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 2
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 3
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 4
        </div>
      </div>
    </div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-215"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-215"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 1
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-216"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                <div>
                  <button
                    aria-controls="fd-216"
                    aria-label="expand"
                    aria-pressed={false}
                    className="fd-tree__control"
                    onClick={[Function]}
                  />
                  Child 1
                </div>
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
            <ul
              aria-hidden={true}
              className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
              role="group"
            >
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-217"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    <div>
                      <button
                        aria-controls="fd-217"
                        aria-label="expand"
                        aria-pressed={false}
                        className="fd-tree__control"
                        onClick={[Function]}
                      />
                      Grandchild 1
                    </div>
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 2
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 3
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 4
                  </div>
                </div>
                <ul
                  aria-hidden={true}
                  className="fd-tree__group fd-tree__group--sublevel-3 is-hidden"
                  role="group"
                >
                  <li
                    aria-expanded={false}
                    className="fd-tree__item"
                    id="fd-218"
                    role="treeitem"
                  >
                    <div
                      className="fd-tree__row"
                    >
                      <div
                        className="fd-tree__col fd-tree__col--control"
                      >
                        Great Grandchild 1
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 2
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 3
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 4
                      </div>
                    </div>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-219"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-220"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-220"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 2
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-221"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-222"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-223"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            Row 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-224"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-224"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 4
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-225"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Component API/TreeView Primary 1`] = `
<div
  dir="ltr"
>
  <div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-207"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            Row 1
          </div>
        </div>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-208"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-208"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 2
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-209"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
            </div>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-210"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-211"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-211"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 3
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-212"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                <div>
                  <button
                    aria-controls="fd-212"
                    aria-label="expand"
                    aria-pressed={false}
                    className="fd-tree__control"
                    onClick={[Function]}
                  />
                  Child 1
                </div>
              </div>
            </div>
            <ul
              aria-hidden={true}
              className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
              role="group"
            >
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-213"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    Grandchild 1
                  </div>
                </div>
              </li>
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-214"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    Grandchild 2
                  </div>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Component API/TreeView Rich Tree View 1`] = `
<div
  dir="ltr"
>
  <div>
    <div
      className="fd-tree fd-tree--header"
    >
      <div
        className="fd-tree__row fd-tree__row--header"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-label="expand all"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            Column Header 1
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 2
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 3
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 4
        </div>
      </div>
    </div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-226"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-226"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 1
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-227"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              />
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.google.com"
                >
                  Google
                </a>
              </div>
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.bing.com"
                >
                  Bing
                </a>
              </div>
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.yahoo.com"
                >
                  Yahoo
                </a>
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
